--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,11 @@
 
 /* Your CSS Code here. */
+.holder{
+	display:grid;
+	border:1px solid black;
+	height:200px;
+	width:200px;
+	grid-template-columns:repeat(2,1fr);
+	grid-template-rows:repeat(2,1fr);
+	
+}
